--- a/styles/influencer-gear.css
+++ b/styles/influencer-gear.css
@@ -169,6 +169,7 @@ header{
 }
 .see-more-btn a{
   display: inline-flex;
+  align-items: center;
   text-decoration: none;
   color: #E02C6D;
   font-size: 1rem;
@@ -181,4 +182,37 @@ header{
   width: 16px;
   filter: invert(43%) sepia(78%) saturate(3164%) hue-rotate(320deg) brightness(94%) contrast(97%);
   opacity: 0.87;
+}
+/* FEATURED SECTION */
+.featured-products-container{
+  display: flex;
+  gap: 96px;
+  max-width: 1110px;
+  margin: 0 auto;
+  margin-bottom: 100px;
+  align-items: center;
+}
+.featured-title{
+  font-size: 2.375rem;
+  font-weight: bold;
+  line-height: 60px;
+  color: #0A0826;
+}
+.featured-description{
+  margin: 16px 0px;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 28px;
+  color: #6C6C6C;
+}
+.featured-btn{
+  border-radius: 0px;
+}
+.featured-btn a{
+  display: inline-flex;
+  color: #FFFFFF;
+  font-size: 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  align-items: center;
 }
