--- a/styles/influencer-gear.css
+++ b/styles/influencer-gear.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
 .poppins-font {
   font-family: "Poppins", sans-serif;
+  font-style: normal;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
+.manrope-font {
+  font-family: "Manrope", sans-serif;
   font-style: normal;
 }
 
@@ -216,3 +224,29 @@ header{
   text-decoration: none;
   align-items: center;
 }
+/* FOOTER PART */
+.footer{
+  background-color: #0A0826;
+}
+.footer-container{
+  max-width: 262px;
+  margin: 0% auto;
+  text-align: center;
+  padding: 50px 0px;
+}
+.footer-title{
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: auto;
+  color: #FFFFFF;
+}
+.footer-description{
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 24px;
+  color: #D9DBE1;
+  margin-top: 3px;
+  margin-bottom: 17px;
+}
+/* RESPONSIVENESS FOR SMALLER OR MOBILE DEVICE */
+
