--- a/styles/influencer-gear.css
+++ b/styles/influencer-gear.css
@@ -14,6 +14,9 @@
 }
 
 /* COMMON STYLES */
+.hide{
+  display: none;
+}
 *{
   margin: 0px;
   padding: 0px;
@@ -249,4 +252,78 @@ header{
   margin-bottom: 17px;
 }
 /* RESPONSIVENESS FOR SMALLER OR MOBILE DEVICE */
-
+@media screen and (max-width:576px) {
+  .nav-logo{
+    text-align: center;
+  }
+  .nav-menu-items{
+    display: none;
+  }
+  .search-icon{
+    display: none;
+  }
+  .banner{
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  /* .banner-cam-img{
+    height: 257px;
+    width: 257px;
+    background-image: url(../images/Circle\ design.svg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 70px;
+  } */
+  .companies-container{
+   border: none;
+   flex-wrap: wrap;
+   gap: 40px;
+   justify-content: center;
+  }
+  .cards{
+    margin: 0px 16px;
+  }
+  .card-container{
+    grid-template-columns: repeat(1, 1fr);
+    gap: 15px;
+  }
+  .cards>img{
+    width: 100%;
+  }
+  .gear-title{
+    font-size: 1.75rem;
+    font-weight:bold;
+  }
+  .gear-description{
+    font-weight: bold;
+  }
+  .last-description{
+    font-weight: 400;
+  }
+  .mobile-view{
+    display: none;
+  }
+  /* .gadget-btn{
+    margin-right: 16px;
+  } */
+  .featured-products-container{
+    flex-direction: column-reverse;
+    gap: 0px;
+  }
+  .feauter-2nd-part{
+    text-align: center;
+  }
+  .featured-title{
+    
+    margin: 0% auto;
+  }
+  .featured-description{
+    max-width: 329px;
+    margin: 0% auto;
+  }
+  .featured-btn{
+    margin-top: 40px;
+    margin-bottom: 30px;
+  }
+}
